<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">省旅游局</string>
    <string name="action_settings">Settings</string>
    <string name="provincial_name0">福建省</string>
    <string name="provincial_name1">福州市</string>
    <string name="provincial_name2">莆田市</string>
    <string name="provincial_name3">泉州市</string>
    <string name="provincial_name4">厦门市</string>
    <string name="provincial_name5">漳州市</string>
    <string name="provincial_name6">龙岩市</string>
    <string name="provincial_name7">三明市</string>
    <string name="provincial_name8">南平市</string>
    <string name="provincial_name9">宁德市</string>
    
    <string name="yuding_zynum">在园人数</string>
    <string name="yuding_zl">开放时间: </string>
    <string name="yuding_xk">电话: </string>
    <string name="yuding_pm">景区级别: </string>
    <string name="yuding_lz">最佳旅游时长: </string>
    <string name="yuding_lp">景点联票</string>
    <string name="yuding_jia">￥</string>
    <string name="yuding_bnt">购买</string>
    <string name="yuding_qs">一周人流量趋势</string>
    <string name="yuding_js">介绍</string>
    <string name="yuding_aaa">AAAAA</string>
    <string name="bottom_bnt1">景区地图</string>
    <string name="bottom_bnt2">清新指数</string>
    <string name="bottom_bnt3">门票预定</string>
    <string name="bottom_bnt4">设置</string>

    <string-array name="map_menu">
        <item>最新通知</item>
        <item>本地特色</item>
        <item>旅游服务</item>
    </string-array>

    <string name="tral_title">旅游服务</string>
    <string name="map_bnt1">简介</string>
    <string name="map_bnt2">清新度</string>
    <string name="map_bnt3">地图</string>
    <string name="map_bnt4">收藏</string>
    <string name="map_bnt5">分享</string>
    <string name="map_bnt6">子景点</string>
    <string name="map_bnt7">周边</string>
    <string name="map_bnt8">人流量</string>
    <string name="map_viewbnt1">最新通知</string>
    <string name="map_viewbnt2">本地特色</string>
    <string name="map_viewbnt3">旅游服务</string>
    <string name="sharedialog_t0">分享到</string>
    <string name="sharedialog_t1">新浪微博</string>
    <string name="sharedialog_t2">微信好友</string>
    <string name="sharedialog_t3">朋友圈</string>
    <string name="sharedialog_t4">QQ好友</string>
    <string name="sharedialog_t5">QQ空间</string>
    <string name="sharedialog_t6">短信</string>
    <string name="dialog_shouc">收藏</string>
    <string name="dialog_context1">确定将</string>
    <string name="dialog_context2">景点收入收藏？</string>
    <string name="dialog_qued">确定</string>
    <string name="dialog_qux">取消</string>
    <string name="title_activity_traveling_item">Traveling_itemActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_provincial__ticket">Provincial_TicketActivity</string>
    <string name="title_activity_tichket__list">Tichket_ListActivity</string>
    <string name="ticket_title1">查看附近景点</string>
    <string name="ticket_title2">厦门市思明区镇海路</string>
    <string name="ticket_title3">请选择城市</string>
    <string name="ticket_title4">当季热销</string>
    <string name="zhoubian_dzl">到这里</string>
    <string name="zhoubian_dh">电话</string>
</resources>