<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titlebar_tv"
    tools:context=".Provincial_TicketActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            layout="@layout/titles" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ticket_title1"
                android:textSize="@dimen/qingxin_tv17" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/map_viewsshape"
                android:drawableRight="@drawable/more"
                android:gravity="left|center_vertical"
                android:onClick="tickList"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/ticket_title2"
                android:textSize="@dimen/notify_tv15" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ticket_title3"
                android:textSize="@dimen/qingxin_tv17" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/map_viewsshape"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/boos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/bnt_0"
                            style="@style/ticket_bnt"
                            android:layout_marginLeft="6dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/provincial_name0" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_1"
                            style="@style/ticket_bnt"
                            android:layout_marginTop="3dp"
                            android:text="@string/provincial_name1" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_5"
                            style="@style/ticket_bnt"
                            android:layout_marginTop="3dp"
                            android:text="@string/provincial_name5" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_7"
                            style="@style/ticket_bnt"
                            android:layout_marginTop="3dp"
                            android:text="@string/provincial_name7" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_9"
                            style="@style/ticket_bnt"
                            android:layout_marginRight="6dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/provincial_name9" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/ticket_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/bnt_4"
                            style="@style/ticket_bnt"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="6dp"
                            android:text="@string/provincial_name4" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_6"
                            style="@style/ticket_bnt"
                            android:layout_marginBottom="3dp"
                            android:text="@string/provincial_name3" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_3"
                            style="@style/ticket_bnt"
                            android:layout_marginBottom="3dp"
                            android:text="@string/provincial_name8" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_8"
                            style="@style/ticket_bnt"
                            android:layout_marginBottom="3dp"
                            android:text="@string/provincial_name6" />

                        <TextView
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/ticket_line" />

                        <Button
                            android:id="@+id/bnt_2"
                            style="@style/ticket_bnt"
                            android:layout_marginBottom="3dp"
                            android:layout_marginRight="6dp"
                            android:text="@string/provincial_name2" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ticket_title4"
                    android:textSize="@dimen/qingxin_tv17" />

                <ListView
                    android:id="@+id/ticket_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/map_viewsshape"
                    android:divider="@color/ticket_line"
                    android:dividerHeight="0.5dp"
                    android:listSelector="@drawable/listselect" >
                </ListView>
            </LinearLayout>
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="53dp"
            layout="@layout/bottom_bnt" />
    </LinearLayout>

</RelativeLayout>