<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/map_toum" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/titlebar_tv"
        android:gravity="center"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/dialog_shouc"
        android:textSize="@dimen/qingxin_tv24" />

    <LinearLayout
        android:id="@+id/middles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/titlebar_tv"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/titlebar_tv"
            android:gravity="center"
            android:text="@string/dialog_context1"
            android:textSize="@dimen/title_bar_tv_18" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/titlebar_tv"
            android:gravity="center"
            android:textSize="@dimen/title_bar_tv_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/titlebar_tv"
            android:gravity="center"
            android:text="@string/dialog_context2"
            android:textSize="@dimen/title_bar_tv_18" />
    </LinearLayout>

    <TextView
        android:id="@+id/mid"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_below="@+id/middles"
        android:layout_centerHorizontal="true"
        android:background="@color/notify_timebg" />

    <LinearLayout
        android:id="@+id/as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mid"
        android:layout_centerHorizontal="true"
        android:background="@color/titlebar_tv"
        android:orientation="horizontal" >

        <Button
            style="@style/map_viewbnt"
            android:layout_weight="1"
            android:onClick="dialog_click"
            android:text="@string/dialog_qux" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/qingxin_tv17"
            android:background="@color/notify_timebg" />

        <Button
            style="@style/map_viewbnt"
            android:layout_weight="1"
            android:onClick="dialog_click"
            android:textSize="@dimen/qingxin_tv17"
            android:text="@string/dialog_qued" />
    </LinearLayout>

</RelativeLayout>