<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/map_toum" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bg"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bnt_mapview1"
            style="@style/map_viewbnt"
            android:layout_marginTop="3dp"
            android:onClick="mapViewchanges"
            android:focusable="false"
            android:text="@string/map_viewbnt1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/line_e4" />

        <Button
            android:id="@+id/bnt_mapview2"
            style="@style/map_viewbnt"
            android:onClick="mapViewchanges"
            android:focusable="false"
            android:text="@string/map_viewbnt2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/line_e4" />

        <Button
            android:id="@+id/bnt_mapview3"
            style="@style/map_viewbnt"
            android:layout_marginBottom="3dp"
            android:focusable="false"
            android:onClick="mapViewchanges"
            android:text="@string/map_viewbnt3" />
    </LinearLayout>

</RelativeLayout>