<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bottom_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bottom_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bottomtv_1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/titlebar_bg" />

            <Button
                android:id="@+id/bottombnt_1"
                style="@style/bottom_bnt"
                android:drawableTop="@drawable/menu_2"
                android:text="@string/bottom_bnt1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bottomtv_2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/bottom_bg" />

            <Button
                android:id="@+id/bottombnt_2"
                style="@style/bottom_bnt"
                android:drawableTop="@drawable/menu_1"
                android:text="@string/bottom_bnt2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bottomtv_3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/bottom_bg" />

            <Button
                android:id="@+id/bottombnt_3"
                style="@style/bottom_bnt"
                android:drawableTop="@drawable/menu_3"
                android:text="@string/bottom_bnt3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bottomtv_4"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/bottom_bg" />

            <Button
                android:id="@+id/bottombnt_4"
                style="@style/bottom_bnt"
                android:drawableTop="@drawable/menu_4"
                android:text="@string/bottom_bnt4" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>